--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #theme: minima
 
 # Site Settings
-title: 日新亭
+title: zhumin1992
 email: buzz.zhang@gmail.com
 description: 苟日新，日日新，又日新
 baseurl: ''
