--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 
 # Site Settings
 title: zhumin1992
-email: buzz.zhang@gmail.com
-description: 苟日新，日日新，又日新
+email: zmvampire@163.com
+description: 读万卷书,行万里路
 baseurl: ''
-url: 'https://www.fengerzh.com'
+url: 'https://www.zhumin.com'
 google_analytics: 'UA-108471968-1'
 
 github: [metadata]
