new-md-bundle11

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: zhumin1992
 email: zmvampire@163.com
 description: 读万卷书,行万里路
 baseurl: ''
-url: 'https://www.zhumin.com'
+url: 'zmvampire.github.io'
 google_analytics: 'UA-108471968-1'
 
 github: [metadata]
